fix(components): Set Home component to scroll on overflow

--- a/src/components/Home/style.module.scss
+++ b/src/components/Home/style.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   width: 60%;
   height: 70%;
+  overflow: auto;
 
   background-color: white;
   border-radius: 20px;
